--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,5 @@
       "maxDuration": 30
     }
   },
-  "env": {
-    "DATABASE_URL": "@database_url",
-    "NEXT_PUBLIC_API_URL": "@next_public_api_url"
-  }
+  "env": {}
 }
