--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@heroicons/react": "^2.1.0",
     "@hookform/resolvers": "^3.4.0",
     "@prisma/client": "^6.12.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
@@ -35,17 +38,14 @@
     "recharts": "^2.12.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.0",
+    "typescript": "^5.0.0",
     "zod": "^3.23.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
     "concurrently": "^8.2.2",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0",
-    "typescript": "^5.0.0"
+    "eslint-config-next": "^14.0.0"
   },
   "keywords": [
     "crowdlending",
