--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "npm run build && node dist/index.js",
+    "start:prod": "node dist/index.js",
     "lint": "eslint . --ext .ts",
     "test": "jest"
   },
