--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
-    "start:prod": "node dist/index.js",
+    "postinstall": "npm run build",
     "lint": "eslint . --ext .ts",
     "test": "jest"
   },
