--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@heroicons/react": "^2.1.0",
     "@hookform/resolvers": "^3.4.0",
     "@prisma/client": "^6.12.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.19",
+    "bcrypt": "^6.0.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.400.0",
     "next": "^14.2.0",
     "next-intl": "^4.3.4",
