--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_URL=/api
+JWT_SECRET=your-fallback-secret-for-development
+DATABASE_URL="postgresql://neondb_owner:npg_m1zGSYrLNx5w@ep-orange-cake-ad7qt1rl-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
