--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@hookform/resolvers": "^3.4.0",
     "@neondatabase/serverless": "^1.0.1",
     "@noble/hashes": "^1.8.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^6.12.0",
     "@tippyjs/react": "^4.2.6",
     "@types/bcrypt": "^6.0.0",
