--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "next-intl": "^4.3.4",
     "node-fetch": "^2.7.0",
     "openpay": "^1.0.5",
+    "otplib": "^12.0.1",
     "postcss": "^8.4.38",
     "prisma": "^6.12.0",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
