--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ REFRESH_JWT_SECRET="your-secure-refresh-jwt-secret-key-min-32-chars"
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 NEXT_PUBLIC_API_URL="/api"
 
+# Google Maps API
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="your-google-maps-api-key"
+
 # AWS SES (for email)
 AWS_ACCESS_KEY_ID="your-aws-access-key-id"
 AWS_SECRET_ACCESS_KEY="your-aws-secret-access-key"
@@ -43,3 +46,111 @@ ESCROW_PRIVATE_KEY="your-deployer-private-key"
 ENABLE_BLOCKCHAIN="false"  # Enable blockchain features
 ENABLE_KYC="true"         # Require KYC for investments
 ENABLE_SANDBOX="true"     # Use sandbox for all services
+
+# Production Environment Configuration
+NODE_ENV="development"    # development, staging, production
+APP_ENV="development"     # application environment identifier
+
+# Redis Configuration (for caching and sessions)
+REDIS_URL="redis://localhost:6379"
+REDIS_PASSWORD=""
+REDIS_DB="0"
+REDIS_CLUSTER_MODE="false"
+REDIS_MAX_RETRIES="3"
+REDIS_RETRY_DELAY="1000"
+
+# Session Configuration
+SESSION_SECRET="your-session-secret-key-min-32-chars"
+SESSION_MAX_AGE="604800000"  # 7 days in milliseconds
+SESSION_STORE="redis"        # redis or database
+
+# Caching Configuration
+CACHE_TTL_DEFAULT="3600"     # 1 hour in seconds
+CACHE_TTL_PROPERTIES="1800"  # 30 minutes for properties
+CACHE_TTL_ANALYTICS="7200"   # 2 hours for analytics
+CACHE_TTL_USERS="900"        # 15 minutes for user data
+ENABLE_CACHE="true"
+
+# Error Monitoring (Sentry)
+SENTRY_DSN="your-sentry-dsn-url"
+SENTRY_ENVIRONMENT="development"  # development, staging, production
+SENTRY_RELEASE=""
+SENTRY_TRACES_SAMPLE_RATE="0.1"  # 10% sampling for performance monitoring
+SENTRY_PROFILES_SAMPLE_RATE="0.1"
+ENABLE_SENTRY="false"
+
+# Performance Monitoring
+ENABLE_PERFORMANCE_MONITORING="true"
+PERFORMANCE_SAMPLE_RATE="0.1"
+SLOW_QUERY_THRESHOLD="1000"  # milliseconds
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS="900000"    # 15 minutes
+RATE_LIMIT_MAX_REQUESTS="100"    # requests per window
+RATE_LIMIT_SKIP_SUCCESSFUL="false"
+RATE_LIMIT_KEY_PREFIX="rl:"
+
+# Database Configuration (Production)
+DATABASE_POOL_SIZE="10"
+DATABASE_CONNECTION_TIMEOUT="60000"  # 60 seconds
+DATABASE_QUERY_TIMEOUT="30000"       # 30 seconds
+DATABASE_STATEMENT_TIMEOUT="30000"   # 30 seconds
+DATABASE_IDLE_TIMEOUT="300000"       # 5 minutes
+DATABASE_SSL_MODE="require"          # for production
+
+# Logging Configuration
+LOG_LEVEL="info"              # error, warn, info, debug
+LOG_FORMAT="json"             # json or simple
+LOG_FILE_ENABLED="false"
+LOG_FILE_PATH="./logs/app.log"
+LOG_MAX_FILE_SIZE="10MB"
+LOG_MAX_FILES="5"
+
+# Security Configuration
+BCRYPT_ROUNDS="12"
+HELMET_ENABLED="true"
+CORS_ENABLED="true"
+CORS_ORIGIN="*"               # comma-separated origins for production
+CORS_CREDENTIALS="true"
+
+# File Upload Configuration
+MAX_FILE_SIZE="5242880"       # 5MB in bytes
+ALLOWED_FILE_TYPES="image/jpeg,image/png,image/webp,application/pdf"
+UPLOAD_TEMP_DIR="/tmp/uploads"
+
+# Email Rate Limiting
+EMAIL_RATE_LIMIT="5"          # emails per minute per user
+EMAIL_BURST_LIMIT="10"        # burst allowance
+
+# Monitoring and Health Checks
+HEALTH_CHECK_ENABLED="true"
+HEALTH_CHECK_DATABASE="true"
+HEALTH_CHECK_REDIS="true"
+HEALTH_CHECK_EXTERNAL_APIS="true"
+
+# CDN Configuration
+CDN_URL=""                    # CloudFlare/AWS CloudFront URL
+CDN_ENABLED="false"
+
+# Backup Configuration
+BACKUP_ENABLED="false"
+BACKUP_SCHEDULE="0 2 * * *"   # Daily at 2 AM (cron format)
+BACKUP_RETENTION_DAYS="30"
+BACKUP_S3_BUCKET=""
+BACKUP_S3_REGION=""
+
+# Analytics and Tracking
+GOOGLE_ANALYTICS_ID=""
+HOTJAR_ID=""
+ENABLE_ANALYTICS="false"
+
+# External Service Timeouts (in milliseconds)
+HTTP_TIMEOUT="30000"
+WEBHOOK_TIMEOUT="10000"
+PAYMENT_TIMEOUT="60000"
+
+# Development Tools
+DEBUG_SQL="false"             # Log SQL queries in development
+DEBUG_CACHE="false"           # Log cache operations
+DEBUG_REDIS="false"           # Log Redis operations
+ENABLE_API_DOCS="true"        # Enable API documentation endpoint
