--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
     "@noble/hashes": "^1.8.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^6.12.0",
+    "@sentry/nextjs": "^9.40.0",
+    "@sentry/node": "^9.40.0",
+    "@sentry/tracing": "^7.120.3",
     "@tippyjs/react": "^4.2.6",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/redis": "^4.0.10",
     "api": "^6.1.3",
     "autoprefixer": "^10.4.19",
     "bcrypt": "^6.0.0",
@@ -52,6 +56,7 @@
     "dotenv": "^17.2.0",
     "ethers": "^6.15.0",
     "framer-motion": "^11.2.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.400.0",
     "next": "^14.2.0",
@@ -66,7 +71,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
-    "recharts": "^2.12.0",
+    "recharts": "^2.15.4",
+    "redis": "^5.6.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.0",
     "tippy.js": "^6.3.7",
