--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "version": 2,
   "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "regions": ["iad1"],
-  "installCommand": "npm install --legacy-peer-deps",
-  "env": {
-    "SKIP_ENV_VALIDATION": "true"
-  }
+  "regions": ["iad1"]
 }
